--- a/index.html
+++ b/index.html
@@ -6,102 +6,113 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+            <a href="./index.html" class="header-logo link">
+                <span class="header-logo-first">Web</span>
+                <span class="header-logo-last">Studio</span>
+            </a>
+            <ul class="list">
+                <li><a href="./index.html" class="header-list-item link">Studio</a></li>
+                <li><a href="./portfolio.html" class="header-list-item link">Portfolio</a></li>
+                <li><a href="#" class="header-list-item link">Contacts</a></li>
             </ul>
         </nav>
         <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <ul class="list">
+                <li><a href="mailto:info@devstudio.com" class="header-address link">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="header-address link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+        <section class="hero">
+            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+            <button type="button" class="hero-bottom-text">Order Service</button>
         </section>
         <section>
-            <h2 hidden="Solutions">Solutions</h2>
+            <h2 hidden>Solutions</h2>
             <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>
+                <li class="list">
+                    <h3 class="feature-list-head">Strategy</h3>
+                    <p class="feature-list-item">
                         Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>
+                <li class="list">
+                    <h3 class="feature-list-head">Punctuality</h3>
+                    <p class="feature-list-item">
                         Bring the key message to the brand's audience for the best price within the shortest possible time.
                     </p>
                 </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>
+                <li class="list">
+                    <h3 class="feature-list-head">Diligence</h3>
+                    <p class="feature-list-item">
                         Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                     </p>
                 </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>
+                <li class="list">
+                    <h3 class="feature-list-head">Technologies</h3>
+                    <p class="feature-list-item">
                         Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                     </p>
                 </li>
             </ul>
         </section>
         <section>
-            <h2>What are we doing</h2>
-            <ul>
+            <h2 class="img-head">What are we doing</h2>
+            <ul class="link list">
                 <li>
                     <img src="./images/1-min.jpg" alt="Desktop" width="360" height="300" />
                 </li>
                 <li>
                     <img src="./images/2-min.jpg" alt="App for Mobile" width="360" height="300" />
                 </li>
-                <li>
+                <li >
                     <img src="./images/3-min.jpg" alt="Laptop" width="360" height="300" />
                 </li>
             </ul>
         </section>
         <section>
-            <h2>Our Team</h2>
+            <h2 class="team-head">Our Team</h2>
             <ul>
-                <li>
+                <li class="list">
                     <img src="./images/4-min.jpg" alt="Mark Guerrero" width="264" height="260" />
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="team-h">Mark Guerrero</h3>
+                    <p class="team-p">Product Designer</p>
                 </li>
-                <li>
+                <li class="list">
                     <img src="./images/5-min.jpg" alt="Tom Ford" width="264" height="260" />
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="team-h">Tom Ford</h3>
+                    <p class="team-p">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="list">
                     <img src="./images/6-min.jpg" alt="Camila Garcia" width="264" height="260" />
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="team-h">Camila Garcia</h3>
+                    <p class="team-p">Marketing</p>
                 </li>
-                <li>
+                <li class="list">
                     <img src="./images/7-min.jpg" alt="Daniel Wilson" width="264" height="260" />
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-h">Daniel Wilson</h3>
+                    <p class="team-p">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>
+    <footer class="Footer">
+        <a href="./index.html" class="Footer-logo link">
+            <span class="Footer-logo-first">Web</span>
+            <span class="Footer-logo-last">Studio</span>
+        </a>
+        <p class="Footer-title">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
