--- a/index.html
+++ b/index.html
@@ -17,16 +17,15 @@
     <header class="header">
         <nav>
             <a href="./index.html" class="header-logo link">
-                <span class="header-logo-first">Web</span>
-                <span class="header-logo-last">Studio</span>
+                Web<span class="header-logo-last">Studio</span>
             </a>
             <ul class="list">
                 <li><a href="./index.html" class="header-list-item link">Studio</a></li>
                 <li><a href="./portfolio.html" class="header-list-item link">Portfolio</a></li>
-                <li><a href="#" class="header-list-item link">Contacts</a></li>
+                <li><a href="" class="header-list-item link">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="header-address">
             <ul class="list">
                 <li><a href="mailto:info@devstudio.com" class="header-address link">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111" class="header-address link">+11 (000) 111-11-11</a></li>
@@ -39,29 +38,29 @@
             <button type="button" class="hero-bottom-text">Order Service</button>
         </section>
         <section>
-            <h2 hidden>Solutions</h2>
-            <ul>
-                <li class="list">
+            <h2 class="feature-list-head" hidden>Solutions</h2>
+            <ul class="list">
+                <li>
                     <h3 class="feature-list-head">Strategy</h3>
-                    <p class="feature-list-item">
+                    <p class="feature-item">
                         Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
-                <li class="list">
+                <li>
                     <h3 class="feature-list-head">Punctuality</h3>
-                    <p class="feature-list-item">
+                    <p class="feature-item">
                         Bring the key message to the brand's audience for the best price within the shortest possible time.
                     </p>
                 </li>
-                <li class="list">
+                <li>
                     <h3 class="feature-list-head">Diligence</h3>
-                    <p class="feature-list-item">
+                    <p class="feature-item">
                         Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                     </p>
                 </li>
-                <li class="list">
+                <li>
                     <h3 class="feature-list-head">Technologies</h3>
-                    <p class="feature-list-item">
+                    <p class="feature-item">
                         Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                     </p>
                 </li>
@@ -81,25 +80,25 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="team">
             <h2 class="team-head">Our Team</h2>
-            <ul>
-                <li class="list">
+            <ul class="list">
+                <li class="team-list">
                     <img src="./images/4-min.jpg" alt="Mark Guerrero" width="264" height="260" />
                     <h3 class="team-h">Mark Guerrero</h3>
                     <p class="team-p">Product Designer</p>
                 </li>
-                <li class="list">
+                <li class="team-list">
                     <img src="./images/5-min.jpg" alt="Tom Ford" width="264" height="260" />
                     <h3 class="team-h">Tom Ford</h3>
                     <p class="team-p">Frontend Developer</p>
                 </li>
-                <li class="list">
+                <li class="team-list">
                     <img src="./images/6-min.jpg" alt="Camila Garcia" width="264" height="260" />
                     <h3 class="team-h">Camila Garcia</h3>
                     <p class="team-p">Marketing</p>
                 </li>
-                <li class="list">
+                <li class="team-list">
                     <img src="./images/7-min.jpg" alt="Daniel Wilson" width="264" height="260" />
                     <h3 class="team-h">Daniel Wilson</h3>
                     <p class="team-p">UI Designer</p>
@@ -107,12 +106,11 @@
             </ul>
         </section>
     </main>
-    <footer class="Footer">
-        <a href="./index.html" class="Footer-logo link">
-            <span class="Footer-logo-first">Web</span>
-            <span class="Footer-logo-last">Studio</span>
+    <footer class="footer">
+        <a href="./index.html" class="footer-logo link">
+            Web<span class="footer-logo-last">Studio</span>
         </a>
-        <p class="Footer-title">
+        <p class="footer-title">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
