--- a/portfolio.html
+++ b/portfolio.html
@@ -17,16 +17,16 @@
     <header class="header">
         <nav>
             <a href="./index.html" class="header-logo link">
-                <span class="header-logo-first">Web</span>
-                <span class="header-logo-last">Studio</span>
+                Web<span class="header-logo-last">Studio</span>
+    
             </a>
             <ul class="list">
                 <li><a href="./index.html" class="header-list-item link">Studio</a></li>
                 <li><a href="./portfolio.html" class="header-list-item link">Portfolio</a></li>
-                <li><a href="#" class="header-list-item link">Contacts</a></li>
+                <li><a href="" class="header-list-item link">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="header-address">
             <ul class="list">
                 <li><a href="mailto:info@devstudio.com" class="header-address link">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111" class="header-address link">+11 (000) 111-11-11</a></li>
@@ -35,9 +35,8 @@
     </header>
 
     <main>
-        <h1 hidden>Portfolio</h1>
         <section>
-            <h2 hidden>Filters</h2>
+            <h1 hidden>Portfolio</h1>
             <ul class="list">
                 <li><button type="button" class="filter-btn">All</button></li>
                 <li><button type="button" class="filter-btn">Web Site</button></li>
@@ -45,9 +44,7 @@
                 <li><button type="button" class="filter-btn">Design</button></li>
                 <li><button type="button" class="filter-btn">Marketing</button></li>
             </ul>
-        </section>
-        <section>
-            <h2 hidden>Row1</h2>
+
             <ul class="list">
                 <li>
                     <img src="./images/BankingApp221-min.jpg" alt="Banking App Interface Concept" width="360" height="300" />
@@ -65,9 +62,7 @@
                     <p class="card-list-p">App</p>
                 </li>
             </ul>
-        </section>
-        <section>
-            <h2 hidden>Row2</h2>
+
             <ul class="list">
                 <li>
                     <img src="./images/TaxiService231-min.jpg" alt="Taxi Service" width="360" height="300" />
@@ -85,9 +80,7 @@
                     <p class="card-list-p">Marketing</p>
                 </li>
             </ul>
-        </section>
-        <section>
-            <h2 hidden>Row3</h2>
+
             <ul class="list">
                 <li>
                     <img src="./images/InstagramStoriesConcept241-min.jpg" alt="Instagram Stories Concept" width="360" height="300" />
@@ -108,12 +101,11 @@
         </section>
     </main>
 
-    <footer class="Footer">
-        <a href="./index.html" class="Footer-logo link">
-            <span class="Footer-logo-first">Web</span>
-            <span class="Footer-logo-last">Studio</span>
+    <footer class="footer">
+        <a href="./index.html" class="footer-logo link">
+            Web<span class="footer-logo-last">Studio</span>
         </a>
-        <p class="Footer-title">
+        <p class="footer-title">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
