--- a/portfolio.html
+++ b/portfolio.html
@@ -46,17 +46,17 @@
             </ul>
 
             <ul class="list">
-                <li>
+                <li class="link card-list">
                     <img src="./images/BankingApp221-min.jpg" alt="Banking App Interface Concept" width="360" height="300" />
                     <h3 class="card-list-h">Banking App Interface Concept</h3>
                     <p class="card-list-p">App</p>
                 </li>
-                <li>
+                <li class="link card-list">
                     <img src="./images/CashlessPayment222-min.jpg" alt="Cashless Payment" width="360" height="300" />
                     <h3 class="card-list-h">Cashless Payment</h3>
                     <p class="card-list-p">Marketing</p>
                 </li>
-                <li>
+                <li class="link card-list">
                     <img src="./images/Medition223-min.jpg" alt="Meditation App" width="360" height="300" />
                     <h3 class="card-list-h">Meditation App</h3>
                     <p class="card-list-p">App</p>
@@ -64,17 +64,17 @@
             </ul>
 
             <ul class="list">
-                <li>
+                <li class="link card-list">
                     <img src="./images/TaxiService231-min.jpg" alt="Taxi Service" width="360" height="300" />
                     <h3 class="card-list-h">Taxi Service</h3>
                     <p class="card-list-p">Marketing</p>
                 </li>
-                <li>
+                <li class="link card-list">
                     <img src="./images/ScreenIllusrations232-min.jpg" alt="Screen Illustrations" width="360" height="300" />
                     <h3 class="card-list-h">Screen Illustrations</h3>
                     <p class="card-list-p">Design</p>
                 </li>
-                <li>
+                <li class="link card-list">
                     <img src="./images/OnlineCourses233-min.jpg" alt="Online Courses" width="360" height="300" />
                     <h3 class="card-list-h">Online Courses</h3>
                     <p class="card-list-p">Marketing</p>
@@ -82,17 +82,17 @@
             </ul>
 
             <ul class="list">
-                <li>
+                <li class="link card-list">
                     <img src="./images/InstagramStoriesConcept241-min.jpg" alt="Instagram Stories Concept" width="360" height="300" />
                     <h3 class="card-list-h">Instagram Stories Concept</h3>
                     <p class="card-list-p">Design</p>
                 </li>
-                <li>
+                <li class="link card-list">
                     <img src="./images/OrganicFood242-min.jpg" alt="Organic Food" width="360" height="300" />
                     <h3 class="card-list-h">Organic Food</h3>
                     <p class="card-list-p">Web Site</p>
                 </li>
-                <li>
+                <li class="link card-list">
                     <img src="./images/FreshCoffee243-min.jpg" alt="Fresh Coffee" width="360" height="300" />
                     <h3 class="card-list-h">Fresh Coffee</h3>
                     <p class="card-list-p">Web Site</p>
