--- a/portfolio.html
+++ b/portfolio.html
@@ -45,18 +45,18 @@
                 <li><button type="button" class="filter-btn">Marketing</button></li>
             </ul>
 
-            <ul class="list">
-                <li class="link card-list">
+            <ul class="list link card-list">
+                <li>
                     <img src="./images/BankingApp221-min.jpg" alt="Banking App Interface Concept" width="360" height="300" />
                     <h3 class="card-list-h">Banking App Interface Concept</h3>
                     <p class="card-list-p">App</p>
                 </li>
-                <li class="link card-list">
+                <li>
                     <img src="./images/CashlessPayment222-min.jpg" alt="Cashless Payment" width="360" height="300" />
                     <h3 class="card-list-h">Cashless Payment</h3>
                     <p class="card-list-p">Marketing</p>
                 </li>
-                <li class="link card-list">
+                <li>
                     <img src="./images/Medition223-min.jpg" alt="Meditation App" width="360" height="300" />
                     <h3 class="card-list-h">Meditation App</h3>
                     <p class="card-list-p">App</p>
