--- a/portfolio.html
+++ b/portfolio.html
@@ -47,14 +47,14 @@
 
             <ul class="list card-list">
                 <li>
-                    <a href="" list link card-list>
+                    <a href="" link>
                         <img src="./images/BankingApp221-min.jpg" alt="Banking App Interface Concept" width="360" height="300" />
                         <h3 class="card-list-h">Banking App Interface Concept</h3>
                         <p class="card-list-p">App</p>                        
                     </a>
                 </li>
                 <li>
-                    <a href="" list link card-list>
+                    <a href="" link>
                         <img src="./images/CashlessPayment222-min.jpg" alt="Cashless Payment" width="360" height="300" />
                         <h3 class="card-list-h">Cashless Payment</h3>
                         <p class="card-list-p">Marketing</p>                        
