--- a/portfolio.html
+++ b/portfolio.html
@@ -45,22 +45,22 @@
                 <li><button type="button" class="filter-btn">Marketing</button></li>
             </ul>
 
-            <ul class="list card-list">
-                <li>
+            <ul class="list link">
+                <li class="link card-list">
                     <a href="" class="link">
                         <img src="./images/BankingApp221-min.jpg" alt="Banking App Interface Concept" width="360" height="300" />
                         <h3 class="card-list-h">Banking App Interface Concept</h3>
                         <p class="card-list-p">App</p>                        
                     </a>
                 </li>
-                <li>
+                <li class="link card-list">
                     <a href="" class="link">
                         <img src="./images/CashlessPayment222-min.jpg" alt="Cashless Payment" width="360" height="300" />
                         <h3 class="card-list-h">Cashless Payment</h3>
                         <p class="card-list-p">Marketing</p>                        
                     </a>
                 </li>
-                <li>
+                <li class="link card-list">
                     <a href="" class="link">
                         <img src="./images/Medition223-min.jpg" alt="Meditation App" width="360" height="300" />
                         <h3 class="card-list-h">Meditation App</h3>
