--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
         <link rel="stylesheet" href="./css/styles.css">
     </head>
 
@@ -49,18 +50,21 @@
                             Our goal is to identify the business problem to walk away with the perfect and creative solution.
                         </p>
                     </li>
+
                     <li>
                         <h3 class="feature-list-head">Punctuality</h3>
                         <p class="feature-item">
                             Bring the key message to the brand's audience for the best price within the shortest possible time.
                         </p>
                     </li>
+
                     <li>
                         <h3 class="feature-list-head">Diligence</h3>
                         <p class="feature-item">
                             Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                         </p>
                     </li>
+
                     <li>
                         <h3 class="feature-list-head">Technologies</h3>
                         <p class="feature-item">
@@ -72,15 +76,17 @@
 
             <section>
                 <h2 class="img-head">What are we doing</h2>
-                <ul class="link list">
+                <ul class="list">
                     <li>
-                        <img src="./images/1-min.jpg" alt="Desktop" width="360" height="300" />
+                        <img src="./images/doing/doing1.jpg" alt="Desktop" width="360" height="300" />
                     </li>
+
                     <li>
-                        <img src="./images/2-min.jpg" alt="App for Mobile" width="360" height="300" />
+                        <img src="./images/doing/doing2.jpg" alt="App for Mobile" width="360" height="300" />
                     </li>
+
                     <li >
-                        <img src="./images/3-min.jpg" alt="Laptop" width="360" height="300" />
+                        <img src="./images/doing/doing3.jpg" alt="Laptop" width="360" height="300" />
                     </li>
                 </ul>
             </section>
@@ -89,22 +95,25 @@
                 <h2 class="team-head">Our Team</h2>
                 <ul class="list">
                     <li class="team-list">
-                        <img src="./images/4-min.jpg" alt="Mark Guerrero" width="264" height="260" />
+                        <img src="./images/team/team1.jpg" alt="Mark Guerrero" width="264" height="260" />
                         <h3 class="team-h">Mark Guerrero</h3>
                         <p class="team-p">Product Designer</p>
                     </li>
+
                     <li class="team-list">
-                        <img src="./images/5-min.jpg" alt="Tom Ford" width="264" height="260" />
+                        <img src="./images/team/team2.jpg" alt="Tom Ford" width="264" height="260" />
                         <h3 class="team-h">Tom Ford</h3>
                         <p class="team-p">Frontend Developer</p>
                     </li>
+
                     <li class="team-list">
-                        <img src="./images/6-min.jpg" alt="Camila Garcia" width="264" height="260" />
+                        <img src="./images/team/team3.jpg" alt="Camila Garcia" width="264" height="260" />
                         <h3 class="team-h">Camila Garcia</h3>
                         <p class="team-p">Marketing</p>
                     </li>
+                    
                     <li class="team-list">
-                        <img src="./images/7-min.jpg" alt="Daniel Wilson" width="264" height="260" />
+                        <img src="./images/team/team4.jpg" alt="Daniel Wilson" width="264" height="260" />
                         <h3 class="team-h">Daniel Wilson</h3>
                         <p class="team-p">UI Designer</p>
                     </li>
