--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
         <link rel="stylesheet" href="./css/styles.css">
     </head>
 
@@ -17,7 +19,6 @@
             <nav>
                 <a href="./index.html" class="header-logo link">
                     Web<span class="header-logo-last">Studio</span>
-        
                 </a>
                 <ul class="list">
                     <li><a href="./index.html" class="header-list-item link">Studio</a></li>
@@ -45,10 +46,10 @@
                     <li><button type="button" class="filter-btn">Marketing</button></li>
                 </ul>
 
-                <ul class="list link">
-                    <li class="link card-list">
+                <ul class="list">
+                    <li class="card-list">
                         <a href="" class="link">
-                            <img src="./images/BankingApp221-min.jpg" alt="Banking App Interface Concept" width="360" height="300" />
+                            <img src="./images/portfolio/BankingApp221-min.jpg" alt="Banking App Interface Concept" width="360" height="300" />
                             <h2 class="card-list-h">Banking App Interface Concept</h2>
                             <p class="card-list-p">App</p>                        
                         </a>
@@ -56,7 +57,7 @@
 
                     <li class="link card-list">
                         <a href="" class="link">
-                            <img src="./images/CashlessPayment222-min.jpg" alt="Cashless Payment" width="360" height="300" />
+                            <img src="./images/portfolio/CashlessPayment222-min.jpg" alt="Cashless Payment" width="360" height="300" />
                             <h2 class="card-list-h">Cashless Payment</h2>
                             <p class="card-list-p">Marketing</p>                        
                         </a>
@@ -64,7 +65,7 @@
 
                     <li class="link card-list">
                         <a href="" class="link">
-                            <img src="./images/Medition223-min.jpg" alt="Meditation App" width="360" height="300" />
+                            <img src="./images/portfolio/Medition223-min.jpg" alt="Meditation App" width="360" height="300" />
                             <h2 class="card-list-h">Meditation App</h2>
                             <p class="card-list-p">App</p>
                         </a>
@@ -72,7 +73,7 @@
 
                     <li class="link card-list">
                         <a href="" class="link">
-                            <img src="./images/TaxiService231-min.jpg" alt="Taxi Service" width="360" height="300" />
+                            <img src="./images/portfolio/TaxiService231-min.jpg" alt="Taxi Service" width="360" height="300" />
                             <h2 class="card-list-h">Taxi Service</h2>
                             <p class="card-list-p">Marketing</p>                        
                         </a>
@@ -80,7 +81,7 @@
 
                     <li class="link card-list">
                         <a href="" class="link">
-                            <img src="./images/ScreenIllusrations232-min.jpg" alt="Screen Illustrations" width="360" height="300" />
+                            <img src="./images/portfolio/ScreenIllusrations232-min.jpg" alt="Screen Illustrations" width="360" height="300" />
                             <h2 class="card-list-h">Screen Illustrations</h2>
                             <p class="card-list-p">Design</p>                        
                         </a>
@@ -88,7 +89,7 @@
 
                     <li class="link card-list">
                         <a href="" class="link">
-                            <img src="./images/OnlineCourses233-min.jpg" alt="Online Courses" width="360" height="300" />
+                            <img src="./images/portfolio/OnlineCourses233-min.jpg" alt="Online Courses" width="360" height="300" />
                             <h2 class="card-list-h">Online Courses</h2>
                             <p class="card-list-p">Marketing</p>                        
                         </a>
@@ -96,7 +97,7 @@
 
                     <li class="link card-list">
                         <a href="" class="link">
-                            <img src="./images/InstagramStoriesConcept241-min.jpg" alt="Instagram Stories Concept" width="360" height="300" />
+                            <img src="./images/portfolio/InstagramStoriesConcept241-min.jpg" alt="Instagram Stories Concept" width="360" height="300" />
                             <h2 class="card-list-h">Instagram Stories Concept</h2>
                             <p class="card-list-p">Design</p>                        
                         </a>
@@ -104,15 +105,15 @@
 
                     <li class="link card-list">
                         <a href="" class="link">
-                            <img src="./images/OrganicFood242-min.jpg" alt="Organic Food" width="360" height="300" />
+                            <img src="./images/portfolio/OrganicFood242-min.jpg" alt="Organic Food" width="360" height="300" />
                             <h2 class="card-list-h">Organic Food</h2>
                             <p class="card-list-p">Web Site</p>                        
                         </a>
                     </li>
-                    
+
                     <li class="link card-list">
                         <a href="" class="link">
-                            <img src="./images/FreshCoffee243-min.jpg" alt="Fresh Coffee" width="360" height="300" />
+                            <img src="./images/portfolio/FreshCoffee243-min.jpg" alt="Fresh Coffee" width="360" height="300" />
                             <h2 class="card-list-h">Fresh Coffee</h2>
                             <p class="card-list-p">Web Site</p>                      
                         </a>
